@@ -1,3 +1,9 @@
+2004-05-29  Bastien Nocera  <hadess@hadess.net>
+
+	* gnome-vfs.keys.in: Translate mime descriptions for Real Player,
+	patch adapted from Takao Fujiwara <Takao.Fujiwara@Sun.COM>
+	(Closes: #138615)
+
 2004-05-04  Jody Goldberg <jody@gnome.org>
 
 	* gnome-vfs.applications : back out all the aliases and new mime
